--- a/index.html
+++ b/index.html
@@ -5,5 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <footer>
+      Coded by
+      <a href="https://github.com/Cleo-Masson" target="_blank">Cleo Masson</a>,
+      is
+      <a
+        href="https://github.com/Cleo-Masson/my-new-weather-app"
+        target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and hosted on
+      <a href="my-weather-app-cd.netlify.app" target="_blank">Netflify</a>
+    </footer>
+  </body>
 </html>
