Added the html elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
   </head>
   <body>
+    <form>
+      <input type="search" placeholder="Enter city..." required />
+      <input type="submit" value="Search" />
+    </form>
+    <h1>Tamarin</h1>
+    <p>
+      Tuesday 12:17, scattered clouds
+      <br />
+      Humidity: 66%, Wind: 3.13km/h
+    </p>
+    <div>🌥️22 °C</div>
+
     <footer>
       Coded by
       <a href="https://github.com/Cleo-Masson" target="_blank">Cleo Masson</a>,
