styled the form

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
 
   <body>
     <div class="weather-app">
-      <form>
-        <input type="search" placeholder="Enter city..." required />
-        <input type="submit" value="Search" />
-      </form>
+      <header>
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter city..."
+            required
+            class="search-input"
+          />
+          <input type="submit" value="Search" class="search-submit" />
+        </form>
+      </header>
       <h1>Tamarin</h1>
       <p>
         Tuesday 12:17, scattered clouds
