updated basic css

--- a/index.html
+++ b/index.html
@@ -26,14 +26,22 @@
           <input type="submit" value="Search" class="search-submit" />
         </form>
       </header>
-      <h1>Tamarin</h1>
-      <p>
-        Tuesday 12:17, scattered clouds
-        <br />
-        Humidity: 66%, Wind: 3.13km/h
-      </p>
-      <div>🌥️22 °C</div>
+      <div class="weather-app-info">
+        <div>
+          <h1 class="weather-app-city">Tamarin</h1>
 
+          <p>
+            Tuesday 12:17, scattered clouds
+            <br />
+            Humidity: 66%, Wind: 3.13km/h
+          </p>
+        </div>
+        <div class="weather-app-temperature">
+          <div class="weather-app-icon">🌥️</div>
+          22
+          <div class="weather-app-unit">°C</div>
+        </div>
+      </div>
       <footer>
         Coded by
         <a href="https://github.com/Cleo-Masson" target="_blank">Cleo Masson</a
