--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       <footer>
         Coded by
         <a href="https://github.com/Cleo-Masson" target="_blank">Cleo Masson</a
-        >, is
+        >, is open-sourced on
         <a
           href="https://github.com/Cleo-Masson/my-new-weather-app"
           target="_blank"
-          >open-sourced on GitHub</a
+          >GitHub</a
         >
         and hosted on
         <a href="my-weather-app-cd.netlify.app" target="_blank">Netflify</a>
