Added basic search engine

--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
         <a href="my-weather-app-cd.netlify.app" target="_blank">Netflify</a>
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
