--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter city..."
             required
             class="search-input"
+            id="search-input"
           />
-          <input type="submit" value="Search" class="search-submit" />
+          <input
+            type="submit"
+            value="Search"
+            class="search-submit"
+            id="search-submit"
+          />
         </form>
       </header>
       <div class="weather-app-info">
         <div>
-          <h1 class="weather-app-city">Tamarin</h1>
+          <h1 class="weather-app-city" id="city-name">Tamarin</h1>
 
           <p>
             Tuesday 12:17, scattered clouds
