--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
       <div class="weather-app-info">
         <div>
-          <h1 class="weather-app-city" id="city-name">Tamarin</h1>
+          <h1 class="weather-app-city" id="city-name"></h1>
 
           <p>
             Tuesday 12:17, scattered clouds
@@ -45,7 +45,7 @@
         </div>
         <div class="weather-app-temperature">
           <div class="weather-app-icon">🌥️</div>
-          22
+          <div id="temperature"></div>
           <div class="weather-app-unit">°C</div>
         </div>
       </div>
