--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
           <h1 class="weather-app-city" id="city-name"></h1>
 
           <p>
-            Tuesday 12:17, scattered clouds
+            <span id="date">Tuesday</span><span id="time">12:17</span>,
+            <span id="description">scattered clouds</span>
             <br />
-            Humidity: 66%, Wind: 3.13km/h
+            Humidity: <strong id="humidity">66%</strong>, Wind:
+            <strong id="wind-Speed">3.13km/h</strong>
           </p>
         </div>
         <div class="weather-app-temperature">
