--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
           <h1 class="weather-app-city" id="city-name"></h1>
 
           <p>
-            <span id="date">Tuesday</span><span id="time">12:17</span>,
+            <span id="date"></span><span id="time"></span>,
             <span id="description">scattered clouds</span>
             <br />
-            Humidity: <strong id="humidity">66%</strong>, Wind:
-            <strong id="wind-Speed">3.13km/h</strong>
+            Humidity:
+            <strong id="humidity">66%</strong>, Wind:
+            <strong id="wind-speed">3.13km/h</strong>
           </p>
         </div>
         <div class="weather-app-temperature">
-          <div class="weather-app-icon">🌥️</div>
+          <div id="icon"></div>
           <div id="temperature"></div>
           <div class="weather-app-unit">°C</div>
         </div>
