--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div>
           <h1 class="weather-app-city" id="city-name"></h1>
 
-          <p>
+          <p class="weather-details">
             <span id="date"></span><span id="time"></span>,
             <span id="description">scattered clouds</span>
             <br />
