updated the Netlify link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           >GitHub</a
         >
         and hosted on
-        <a href="my-weather-app-cd.netlify.app" target="_blank">Netflify</a>
+        <a href="https://my-weather-app-cd.netlify.app" target="_blank"
+          >Netlify</a
+        >
       </footer>
     </div>
     <script src="src/index.js"></script>
