--- a/index.html
+++ b/index.html
@@ -33,25 +33,28 @@
           />
         </form>
       </header>
-      <div class="weather-app-info">
-        <div>
-          <h1 class="weather-app-city" id="city-name"></h1>
+      <main>
+        <div class="weather-app-info">
+          <div>
+            <h1 class="weather-app-city" id="city-name"></h1>
 
-          <p class="weather-details">
-            <span id="date"></span><span id="time"></span>,
-            <span id="description">scattered clouds</span>
-            <br />
-            Humidity:
-            <strong id="humidity">66%</strong>, Wind:
-            <strong id="wind-speed">3.13km/h</strong>
-          </p>
+            <p class="weather-details">
+              <span id="date"></span><span id="time"></span>,
+              <span id="description">scattered clouds</span>
+              <br />
+              Humidity:
+              <strong id="humidity">66%</strong>, Wind:
+              <strong id="wind-speed">3.13km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature">
+            <div id="icon"></div>
+            <div id="temperature"></div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
-        <div class="weather-app-temperature">
-          <div id="icon"></div>
-          <div id="temperature"></div>
-          <div class="weather-app-unit">°C</div>
-        </div>
-      </div>
+        <div class="weather-forecast" id="forecast"></div>
+      </main>
       <footer>
         Coded by
         <a href="https://github.com/Cleo-Masson" target="_blank">Cleo Masson</a
